Memory Leakage fixed on PDS_client_server_v1 Project + NetworkingData class added on CLion/Notepad Project

--- a/Notepad_Project/CLion/notepad/ui/startdialog.ui
+++ b/Notepad_Project/CLion/notepad/ui/startdialog.ui
@@ -38,6 +38,9 @@
    <property name="text">
     <string>Connect to Server</string>
    </property>
+   <property name="default">
+    <bool>true</bool>
+   </property>
   </widget>
   <widget class="QPushButton" name="quitButton">
    <property name="geometry">
