--- a/PDS_client_server_v3/PDS_Notepad_Client/ui/shareddocumentsexplorer.ui
+++ b/PDS_client_server_v3/PDS_Notepad_Client/ui/shareddocumentsexplorer.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>333</width>
+    <width>441</width>
     <height>286</height>
    </rect>
   </property>
@@ -42,9 +42,9 @@
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
     <rect>
-     <x>250</x>
+     <x>360</x>
      <y>250</y>
-     <width>75</width>
+     <width>71</width>
      <height>23</height>
     </rect>
    </property>
@@ -57,7 +57,7 @@
     <rect>
      <x>10</x>
      <y>40</y>
-     <width>311</width>
+     <width>421</width>
      <height>192</height>
     </rect>
    </property>
@@ -73,6 +73,19 @@
    </property>
    <property name="text">
     <string>Select the document you want to open.</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="addCollaboratorButton">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>250</y>
+     <width>101</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Add collaborator</string>
    </property>
   </widget>
  </widget>
