--- a/PDS_client_server_v3/PDS_Notepad_Client/ui/signupdialog.ui
+++ b/PDS_client_server_v3/PDS_Notepad_Client/ui/signupdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>289</width>
-    <height>243</height>
+    <height>273</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -145,8 +145,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>30</x>
-     <y>200</y>
+     <x>40</x>
+     <y>240</y>
      <width>81</width>
      <height>23</height>
     </rect>
@@ -158,14 +158,40 @@
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>200</y>
+     <x>170</x>
+     <y>240</y>
      <width>81</width>
      <height>23</height>
     </rect>
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="NewNicknameLabel">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>200</y>
+     <width>101</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>New Nickname:</string>
+   </property>
+   <property name="buddy">
+    <cstring>newNicknameLineEdit</cstring>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="newNicknameLineEdit">
+   <property name="geometry">
+    <rect>
+     <x>110</x>
+     <y>200</y>
+     <width>171</width>
+     <height>20</height>
+    </rect>
    </property>
   </widget>
  </widget>
