--- a/PDS_client_server_v3/PDS_Notepad_Client/notepad.qrc
+++ b/PDS_client_server_v3/PDS_Notepad_Client/notepad.qrc
@@ -18,5 +18,6 @@
         <file>images/bold.png</file>
         <file>images/italic.png</file>
         <file>images/underline.png</file>
+        <file>images/default_profile_pic.png</file>
     </qresource>
 </RCC>
