--- a/PDS_client_server_v3/PDS_Notepad_Client/ui/signupdialog.ui
+++ b/PDS_client_server_v3/PDS_Notepad_Client/ui/signupdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>289</width>
-    <height>273</height>
+    <width>632</width>
+    <height>234</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -145,8 +145,8 @@
    </property>
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>240</y>
+     <x>110</x>
+     <y>200</y>
      <width>81</width>
      <height>23</height>
     </rect>
@@ -158,8 +158,8 @@
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>240</y>
+     <x>260</x>
+     <y>200</y>
      <width>81</width>
      <height>23</height>
     </rect>
@@ -171,8 +171,8 @@
   <widget class="QLabel" name="NewNicknameLabel">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>200</y>
+     <x>330</x>
+     <y>10</y>
      <width>101</width>
      <height>21</height>
     </rect>
@@ -187,14 +187,64 @@
   <widget class="QLineEdit" name="newNicknameLineEdit">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>200</y>
-     <width>171</width>
-     <height>20</height>
+     <x>430</x>
+     <y>10</y>
+     <width>191</width>
+     <height>21</height>
     </rect>
    </property>
   </widget>
+  <widget class="QLabel" name="imageStatusLabel">
+   <property name="geometry">
+    <rect>
+     <x>350</x>
+     <y>100</y>
+     <width>81</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Image profile:</string>
+   </property>
+   <property name="buddy">
+    <cstring>imageLabel</cstring>
+   </property>
+  </widget>
+  <widget class="QLabel" name="imageLabel">
+   <property name="geometry">
+    <rect>
+     <x>460</x>
+     <y>50</y>
+     <width>121</width>
+     <height>121</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap resource="../notepad.qrc">:/images/default_profile_pic.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="newImageButton">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>200</y>
+     <width>131</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Choose new image...</string>
+   </property>
+  </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="../notepad.qrc"/>
+ </resources>
  <connections/>
 </ui>
