--- a/PDS_client_server_v3/PDS_Notepad_Client/ui/shareddocumentsexplorer.ui
+++ b/PDS_client_server_v3/PDS_Notepad_Client/ui/shareddocumentsexplorer.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>441</width>
+    <width>581</width>
     <height>286</height>
    </rect>
   </property>
@@ -42,7 +42,7 @@
   <widget class="QPushButton" name="cancelButton">
    <property name="geometry">
     <rect>
-     <x>360</x>
+     <x>500</x>
      <y>250</y>
      <width>71</width>
      <height>23</height>
@@ -57,7 +57,7 @@
     <rect>
      <x>10</x>
      <y>40</y>
-     <width>421</width>
+     <width>561</width>
      <height>192</height>
     </rect>
    </property>
@@ -86,6 +86,19 @@
    </property>
    <property name="text">
     <string>Add collaborator</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="modifyProfileButton">
+   <property name="geometry">
+    <rect>
+     <x>360</x>
+     <y>250</y>
+     <width>131</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Modify your profile...</string>
    </property>
   </widget>
  </widget>
